# characterCadre

./: .gitignore  LICENSE  README.md  launch.py  start-debug.bat  start.bat
.claude/: settings.local.json
assets/Documentation/: CharacterCadre_Project_Guide.md
backend/: pyproject.toml
backend/app/: defaults.py  dice.py  fixtures.py  llm_logger.py  logging_config.py  main.py  models.py  ollama_client.py  phases.py  prompt_builder.py  seed.py  silly_tavern.py  storage.py  summarizer.py  validation.py  variables.py
backend/app/routes/: characters.py  chat.py  debug.py  health.py  saves.py  scenarios.py
backend/scripts/: seed_long_history.py
backend/tests/integration/: test_phases.py  test_routes.py
backend/tests/resilience/: test_resilience.py
backend/tests/unit/: test_ending_detection.py  test_models.py  test_prompt_builder.py  test_seed.py  test_silly_tavern.py  test_storage.py  test_summarizer.py  test_validation.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BeatsEditor.tsx  MarkdownMessage.tsx  OllamaStatus.tsx  ResponseExamplePairs.tsx  SettingsSidebar.tsx  StringList.tsx  SummaryField.tsx
frontend/src/hooks/: useStream.ts
frontend/src/pages/: EditCharacters.tsx  EditScenarios.tsx  Game.tsx  MainMenu.tsx  NewGame.tsx
frontend/src/types/: index.ts
